<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ui.activities.BaseActivity"
    tools:openDrawer="start">
    <!--    tools:openDrawer="start"-->

    <!--Background Layout-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!--ActionBar-->
        <include
            android:id="@+id/includeAppBarLayoutBase"
            layout="@layout/app_bar_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <!--Fragment of the baseActivity-->
        <fragment
            android:id="@+id/nav_host_fragment_activity_base"
            android:name="androidx.navigation.fragment.NavHostFragment"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:defaultNavHost="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/includeAppBarLayoutBase"
            app:navGraph="@navigation/mobile_navigation"
            tools:ignore="FragmentTagUsage" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!--DrawerLayout-->
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/white">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <!--Layout of buttons-->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <!--Image of the Pharmacy-->
                <ImageView
                    android:id="@+id/ivPharmacyNav"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_150sdp"
                    android:contentDescription="@null"
                    android:scaleType="centerCrop"
                    android:src="@drawable/img"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <!--First Button-->
                <LinearLayout
                    android:id="@+id/buChats"
                    style="@style/SelectableItemBackgroundStyle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:orientation="horizontal"
                    android:padding="@dimen/_10sdp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/ivPharmacyNav">

                    <!--Icon for the first button-->
                    <ImageView
                        android:layout_width="@dimen/_20sdp"
                        android:layout_height="@dimen/_20sdp"
                        android:contentDescription="@null"
                        android:scaleType="fitXY"
                        android:src="@drawable/ic_message"
                        tools:ignore="ImageContrastCheck" />
                    <!--Text for the first button-->
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_8sdp"
                        android:text="@string/chats"
                        android:textSize="@dimen/_13ssp" />

                </LinearLayout>
                <!--Divider_1-->
                <View
                    android:id="@+id/view2"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_1sdp"
                    android:layout_marginHorizontal="@dimen/_10sdp"
                    android:background="@color/gray"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/buChats" />
                <!--Second Button-->
                <LinearLayout
                    android:id="@+id/buEditUserInfo"
                    style="@style/SelectableItemBackgroundStyle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:padding="@dimen/_10sdp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/view2">
                    <!--Icon-->
                    <ImageView
                        android:layout_width="@dimen/_20sdp"
                        android:layout_height="@dimen/_20sdp"
                        android:contentDescription="@null"
                        android:scaleType="fitXY"
                        android:src="@drawable/ic_description"
                        tools:ignore="ImageContrastCheck" />
                    <!--Text-->
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_8sdp"
                        android:text="@string/edit_information"
                        android:textSize="@dimen/_13ssp" />

                </LinearLayout>
                <!--Divider_2-->
                <View
                    android:id="@+id/view"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_1sdp"
                    android:layout_marginHorizontal="@dimen/_10sdp"
                    android:background="@color/gray"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/buEditUserInfo" />
                <!--ThirdButton-->
                <LinearLayout
                    android:id="@+id/buLogout"
                    style="@style/SelectableItemBackgroundStyle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:padding="@dimen/_10sdp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/view">
                    <!--Icon-->
                    <ImageView
                        android:layout_width="@dimen/_20sdp"
                        android:layout_height="@dimen/_20sdp"
                        android:contentDescription="@null"
                        android:scaleType="fitXY"
                        android:src="@drawable/ic_logout"
                        tools:ignore="ImageContrastCheck" />
                    <!--Text-->
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_8sdp"
                        android:text="@string/logout"
                        android:textSize="@dimen/_13ssp" />

                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

    </com.google.android.material.navigation.NavigationView>

</androidx.drawerlayout.widget.DrawerLayout>